--- a/index.html
+++ b/index.html
@@ -1,9 +1,163 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Your Page Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to Musify</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #00256e; /* Dark background color */
+            color: #ffffff; /* White text color */
+        }
+        .splash-content {
+            text-align: center;
+            opacity: 0;
+            animation: fadeIn 2s forwards; /* Fade in animation */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+        }
+        .fade-out {
+            opacity: 0;
+            animation: fadeOut 2s forwards; /* Fade out animation */
+        }
+        .fade-out-hidden {
+            display: none;
+        }
+        .animated-text {
+            display: inline-block;
+            position: relative;
+            animation: animateText 3s infinite;
+        }
+        .loader {
+            font-size: 50px;
+            animation: spin 2s linear infinite;
+            margin-bottom: 2em;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+        #loadingMessage {
+            font-size: 1.2em;
+            margin-bottom: 2em;
+        }
+        #loginButton {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            font-size: 1.2em;
+            cursor: pointer;
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out;
+            animation: animateButton 2s forwards; /* Animate button appearance */
+            display: none;
+        }
+        #loginButton.visible {
+            display: block;
+        }
+        #loginButton:hover {
+            background-color: #45a049;
+        }
+
+        /* Keyframe animations */
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+        @keyframes fadeOut {
+            0% { opacity: 1; }
+            100% { opacity: 0; }
+        }
+        @keyframes animateText {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+            100% { transform: scale(1); }
+        }
+        @keyframes animateButton {
+            0% { transform: scale(0.8); opacity: 0; }
+            100% { transform: scale(1); opacity: 1; }
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <div class="splash-content">
+        <div id="greetingSection">
+            <h2 id="greetingText" class="animated-text"></h2>
+        </div>
+        
+        <div id="welcomeSection" class="fade-out-hidden">
+            <h1>Welcome to <span class="animated-text">Musify</span></h1>
+        </div>
+        
+        <div id="loaderSection" class="fade-out-hidden">
+            <div class="loader">🎵</div> <!-- Musical note as the loader -->
+            <p id="loadingMessage">We are loading your music for you...</p>
+        </div>
+
+        <button id="loginButton" onclick="window.location.href='{{ url_for('auth.login') }}'">
+            Login
+        </button>
+    </div>
+
+    <script>
+        // Function to get time of day
+        function getTimeOfDay() {
+            var time = new Date().getHours();
+            if (time < 12) {
+                return "Morning";
+            } else if (time < 18) {
+                return "Afternoon";
+            } else {
+                return "Evening";
+            }
+        }
+
+        // Show greeting based on time of day
+        setTimeout(function() {
+            document.getElementById('greetingText').innerText = `Good ${getTimeOfDay()},`;
+            document.getElementById('greetingSection').classList.remove('fade-out-hidden');
+            document.getElementById('greetingSection').classList.remove('animated-text');
+        }, 0); // Show greeting immediately
+
+        // Show "Welcome to Musify" after 3 seconds
+        setTimeout(function() {
+            document.getElementById('greetingSection').classList.add('fade-out');
+            setTimeout(function() {
+                document.getElementById('greetingSection').style.display = 'none';
+                document.getElementById('welcomeSection').classList.remove('fade-out-hidden');
+            }, 2000);
+        }, 3000);
+
+        // Show loader after 8 seconds
+        setTimeout(function() {
+            document.getElementById('welcomeSection').classList.add('fade-out');
+            setTimeout(function() {
+                document.getElementById('welcomeSection').style.display = 'none';
+                document.getElementById('loaderSection').classList.remove('fade-out-hidden');
+            }, 2000);
+        }, 8000);
+
+        // Show login button after 13 seconds
+        setTimeout(function() {
+            document.getElementById('loaderSection').classList.add('fade-out');
+            setTimeout(function() {
+                document.getElementById('loaderSection').style.display = 'none';
+                document.getElementById('loginButton').classList.add('visible');
+                document.getElementById('loginButton').style.opacity = '1';
+            }, 2000);
+        }, 13000);
+    </script>
 </body>
 </html>
